samples/_failures_safe/1761345719_b93e53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e7d5084.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_3e7d5084.c:167:9: error: expected declaration or statement at end of input
  167 |         case TOKEN_EOF: return "EOF";
      |         ^~~~
./samples/SAFE/__tmp_3e7d5084.c:167:9: error: expected declaration or statement at end of input
